Wrap some socket handling code in a !NULL bow

This patch or something similar will likely be included in a future
BIND release.

PR:		bin/138061
Submitted by:	Michael Baker <michael.baker@diversit.com.au>
Original patch submitted by:	Volker <volker@vwsoft.com>
Patch reviewed and tweaked by:	ISC

Former-commit-id: 5377b6ff89b7b7d402188916c350e9d28296e454